# dash_sp_aguas

./: .env.example  .eslintrc.json  .gitignore  README.md  architecture.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  start.bat  start.ps1  stop.bat  stop.ps1  tailwind.config.ts  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml
data/: Postos_PLU_FLU_PIEZO_CIAS_BAT_MUNIC_UGRHI_SUB_OTTO-18-03-26a-csv.csv  README.md
docs/: architecture.md  onboarding-notebook.md  repositorio-cliente.md  spec.md
docs/adr/: 0001-stack-inicial.md  0002-db-client-postgres-js.md  0003-modulo-desconformidade.md  0004-auth-supabase-fase-1.md  0005-favoritos-por-usuario.md
ops/importer/: README.md  import_csv.py  pyproject.toml
ops/indexer/: README.md  classificador.py  index_fs.py  indexar_posto.py  pyproject.toml
scripts/: apply_migrations.py  db-migrate.sh  dev.sh  seed_fichas_demo.py  seed_postos_caminhos.py  setup_db.py
src/: middleware.ts
src/app/: global-error.tsx  layout.tsx
src/domain/: acesso-ficha.ts  arquivo-indexado.ts  desconformidade.ts  errors.ts  favorito.ts  ficha-visita.ts  posto.ts  revisao-desconformidade.ts  tipo-dado.ts  tipo-documento.ts
src/infrastructure/: repositories.ts
src/lib/: format.ts  normalize.ts
src/styles/: globals.css
src/types/: dto.ts
supabase/migrations/: 0001_extensions.sql  0002_postos.sql  0003_arquivos_indexados.sql  0004_arquivos_orfaos.sql  0005_acesso_ficha.sql  0006_import_log.sql  0007_indexacao_log.sql  0008_tipos_documento.sql  0009_tipos_dado.sql  0020_postos_favoritos.sql  (+12 more)
(+123 files in other folders)
