[project]
name = "spaguas-indexer"
version = "0.1.0"
description = "Worker de indexação do HD de rede SPÁguas — varredura read-only e UPSERT em arquivos_indexados/arquivos_orfaos."
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "structlog>=24.0",
  "unidecode>=1.3",
  "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
